--- a/templates/base.html
+++ b/templates/base.html
@@ -2,10 +2,8 @@
 <html lang="pt-br">
 <head>
     <meta charset="utf-8">
-    <!-- Usar shrink-to-fit para melhor responsividade com Bootstrap -->
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>{% block title %}Administração de Imóveis{% endblock %}</title>
-    <!-- Bootstrap CSS -->
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     {% block extra_css %}{% endblock %}
 </head>
@@ -17,23 +15,35 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
+            <ul class="navbar-nav mr-auto">
                 <li class="nav-item"><a class="nav-link" href="{% url 'pessoa_list' %}">Pessoas</a></li>
                 <li class="nav-item"><a class="nav-link" href="{% url 'imobiliaria_list' %}">Imobiliárias</a></li>
                 <li class="nav-item"><a class="nav-link" href="{% url 'condominio_list' %}">Condomínios</a></li>
                 <li class="nav-item"><a class="nav-link" href="{% url 'imovel_list' %}">Imóveis</a></li>
                 <li class="nav-item"><a class="nav-link" href="{% url 'contrato_list' %}">Contratos</a></li>
             </ul>
+            <ul class="navbar-nav ml-auto">
+                {% if request.user.is_authenticated %}
+                    <li class="nav-item">
+                        <span class="navbar-text mr-2">{{ request.user.email }}</span>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'logout' %}">Logout</a>
+                    </li>
+                {% else %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'login' %}">Login</a>
+                    </li>
+                {% endif %}
+            </ul>
         </div>
     </nav>
 
     <div class="container-fluid mt-4">
         {% block content %}
-        <!-- Conteúdo específico de cada template -->
         {% endblock %}
     </div>
 
-    <!-- Bootstrap JS e dependências -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/js/bootstrap.bundle.min.js"></script>
     {% block extra_js %}{% endblock %}
