--- a/templates/condominio/condominio_list.html
+++ b/templates/condominio/condominio_list.html
@@ -2,7 +2,7 @@
 {% block title %}Condomínios - Administração de Imóveis{% endblock %}
 {% block content %}
 <h1>Condomínios</h1>
-<a href="{% url 'condominio_create' %}" class="btn btn-primary mb-3">Novo Condomínio</a>
+<a href="{% url 'condominio_create' %}" class="btn btn-secondary mb-3">Novo Condomínio</a>
 <table class="table table-striped">
   <thead>
     <tr>
