--- a/templates/contrato/contrato_list.html
+++ b/templates/contrato/contrato_list.html
@@ -1,20 +1,7 @@
 {% extends "base.html" %}
 {% block title %}Lista de Contratos{% endblock %}
-{% block extra_css %}
-<style>
-  /* Aumenta o padding das células da tabela para melhorar a visualização */
-  .table td, .table th {
-      padding: 0.4rem;
-  }
-  /* Força a tabela a ocupar 100% da largura disponível */
-  .table {
-      width: 100% !important;
-  }
-</style>
-{% endblock %}
 {% block content %}
-<div class="container-fluid mt-4">
-  <h1 class="display-4 text-center">Contratos</h1>
+<h1>Contratos</h1>
 <table class="table table-striped">
   <thead>
     <tr>
