--- a/templates/imobiliaria/imobiliaria_list.html
+++ b/templates/imobiliaria/imobiliaria_list.html
@@ -2,7 +2,7 @@
 {% block title %}Imobiliárias - Administração de Imóveis{% endblock %}
 {% block content %}
 <h1>Imobiliárias</h1>
-<a href="{% url 'imobiliaria_create' %}" class="btn btn-primary mb-3">Nova Imobiliária</a>
+<a href="{% url 'imobiliaria_create' %}" class="btn btn-secondary mb-3">Nova Imobiliária</a>
 <table class="table table-striped">
   <thead>
     <tr>
