--- a/templates/pessoa/pessoa_list.html
+++ b/templates/pessoa/pessoa_list.html
@@ -2,7 +2,7 @@
 {% block title %}Pessoas - Administração de Imóveis{% endblock %}
 {% block content %}
 <h1>Pessoas</h1>
-<a href="{% url 'pessoa_create' %}" class="btn btn-primary mb-3">Cadastrar Pessoa</a>
+<a href="{% url 'pessoa_create' %}" class="btn btn-secondary mb-3">Cadastrar Pessoa</a>
 <table class="table table-striped">
   <thead>
     <tr>
