atualizações em templates

--- a/templates/base.html
+++ b/templates/base.html
@@ -21,6 +21,7 @@
                 <li class="nav-item"><a class="nav-link" href="{% url 'condominio_list' %}">Condomínios</a></li>
                 <li class="nav-item"><a class="nav-link" href="{% url 'imovel_list' %}">Imóveis</a></li>
                 <li class="nav-item"><a class="nav-link" href="{% url 'contrato_list' %}">Contratos</a></li>
+                <li class="nav-item"><a class="nav-link" href="#">Financeiro</a></li>
             </ul>
             <ul class="navbar-nav ml-auto">
                 {% if request.user.is_authenticated %}
