--- a/templates/contrato/contrato_aluguel_detail.html
+++ b/templates/contrato/contrato_aluguel_detail.html
@@ -1,63 +1,144 @@
 {% extends "base.html" %}
-
-{% block title %}Contrato de Locação{% endblock %}
+{% block title %}Detalhes do Contrato{% endblock %}
 
 {% block content %}
-<h1>Contrato de Locação de Imóvel Residencial</h1>
-
-<p>
-    <strong>Objeto:</strong> O presente contrato tem como objeto o imóvel de propriedade do LOCADOR <strong>{{ object.proprietario.nome }}</strong>, 
-    situado em <strong>{{ object.imovel.endereco }}</strong>.
-</p>
-
-<p>
-    <strong>Locador:</strong> {{ object.proprietario.nome }}, {{ object.proprietario.estado_civil }}, CPF: {{ object.proprietario.cpf }}, 
-    RG: {{ object.proprietario.rg }}, residente em {{ object.proprietario.endereco }}.
-</p>
-
-<p>
-    <strong>Locatário:</strong> {{ object.inquilino.nome }}, {{ object.inquilino.estado_civil }}, CPF: {{ object.inquilino.cpf }}, 
-    RG: {{ object.inquilino.rg }}, residente em {{ object.inquilino.endereco }}.
-</p>
-
-<p>
-    <strong>Condições da Locação:</strong><br>
-    O prazo de locação será de 
-    {% with meses=object.data_fim|date:"m" %}
-        {% comment %}Você pode personalizar a exibição do período se necessário{% endcomment %}
-    {% endwith %}
-    a partir de <strong>{{ object.data_inicio|date:"d/m/Y" }}</strong> até <strong>{{ object.data_fim|date:"d/m/Y" }}</strong>.
-</p>
-
-<p>
-    <strong>Valor do Aluguel:</strong> R$ {{ object.valor_aluguel }}
-</p>
-
-<hr>
-<h2>Cláusulas Contratuais</h2>
-
-<p>
-    <strong>CLÁUSULA PRIMEIRA:</strong> O prazo de locação será conforme estipulado, iniciando em {{ object.data_inicio|date:"d/m/Y" }} e terminando em {{ object.data_fim|date:"d/m/Y" }}. 
-</p>
-
-<p>
-    <strong>CLÁUSULA SEGUNDA:</strong> O locatário se obriga a pagar mensalmente o valor de R$ {{ object.valor_aluguel }}, já inclusos os encargos previstos.
-</p>
-
-<!-- Adicione aqui as demais cláusulas conforme o modelo -->
-<p>
-    Toledo, {{ object.data_assinatura|date:"d/m/Y" }}
-</p>
-
-<p>
-    ___________________________<br>
-    <strong>Locador:</strong> {{ object.proprietario.nome }}<br>
-    CPF: {{ object.proprietario.cpf }}
-</p>
-
-<p>
-    ___________________________<br>
-    <strong>Locatário:</strong> {{ object.inquilino.nome }}<br>
-    CPF: {{ object.inquilino.cpf }}
-</p>
+<div class="container mt-5">
+  <div class="card shadow">
+    <div class="card-header bg-secondary text-white">
+      <h2>Detalhes do Contrato</h2>
+    </div>
+    <div class="card-body">
+      
+      <!-- Dados do Contrato -->
+      <h4 class="mb-3">Dados do Contrato</h4>
+      <div class="row">
+        <div class="col-md-3 mb-2">
+          <strong>Imóvel:</strong>
+          <p>{{ object.imovel }}</p>
+        </div>
+        <div class="col-md-3 mb-2">
+          <strong>Inquilino:</strong>
+          <p>{{ object.inquilino }}</p>
+        </div>
+        <div class="col-md-3 mb-2">
+          <strong>Proprietário:</strong>
+          <p>{{ object.proprietario }}</p>
+        </div>
+        <div class="col-md-3 mb-2">
+          <strong>Imobiliária:</strong>
+          <p>{{ object.imobiliaria }}</p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-4 mb-2">
+          <strong>Tipo de Contrato:</strong>
+          <p>{{ object.get_tipo_display }}</p>
+        </div>
+        <div class="col-md-4 mb-2">
+          <strong>Status:</strong>
+          <p>{{ object.get_status_display }}</p>
+        </div>
+        <div class="col-md-4 mb-2">
+          <strong>Período do Contrato:</strong>
+          <p>{{ object.get_periodo_contrato_display }}</p>
+        </div>
+      </div>
+      
+      <hr>
+      <!-- Termos do Contrato -->
+      <h4 class="mb-3">Termos do Contrato</h4>
+      <div class="row">
+        <div class="col-md-4 mb-2">
+          <strong>Data de Início:</strong>
+          <p>{{ object.data_inicio }}</p>
+        </div>
+        <div class="col-md-4 mb-2">
+          <strong>Data de Fim:</strong>
+          <p>{{ object.data_fim }}</p>
+        </div>
+        <div class="col-md-4 mb-2">
+          <strong>Data de Assinatura:</strong>
+          <p>{{ object.data_assinatura_contrato }}</p>
+        </div>
+      </div>
+      
+      <hr>
+      <!-- Condições Financeiras -->
+      <h4 class="mb-3">Condições Financeiras</h4>
+      <div class="row">
+        <div class="col-md-3 mb-2">
+          <strong>Valor Aluguel:</strong>
+          <p>{{ object.valor_aluguel }}</p>
+        </div>
+        <div class="col-md-3 mb-2">
+          <strong>Valor Venda:</strong>
+          <p>{{ object.valor_venda }}</p>
+        </div>
+        <div class="col-md-2 mb-2">
+          <strong>Taxa de Juros:</strong>
+          <p>{{ object.taxa_juros }}</p>
+        </div>
+        <div class="col-md-2 mb-2">
+          <strong>Taxa de Multa:</strong>
+          <p>{{ object.taxa_multa }}</p>
+        </div>
+        <div class="col-md-2 mb-2">
+          <strong>Taxa Adm:</strong>
+          <p>{{ object.taxa_adm }}</p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-3 mb-2">
+          <strong>Garantia:</strong>
+          <p>{{ object.get_garantia_display }}</p>
+        </div>
+        <div class="col-md-3 mb-2">
+          <strong>Valor Caução:</strong>
+          <p>{{ object.valor_caucao }}</p>
+        </div>
+        <div class="col-md-3 mb-2">
+          <strong>Data Pagamento Caução:</strong>
+          <p>{{ object.data_pagamento_caucao }}</p>
+        </div>
+        <div class="col-md-3 mb-2">
+          <strong>Parcelamento Garantia:</strong>
+          <p>{{ object.parcelamento_garantia }}</p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-3 mb-2">
+          <strong>Modo de Pagamento:</strong>
+          <p>{{ object.get_modo_pagamento_display }}</p>
+        </div>
+        <div class="col-md-3 mb-2">
+          <strong>Dia de Pagamento:</strong>
+          <p>{{ object.get_dia_pagamento_display }}</p>
+        </div>
+        <div class="col-md-3 mb-2">
+          <strong>Data do 1º Pagamento:</strong>
+          <p>{{ object.data_primeiro_pagamento }}</p>
+        </div>
+        <div class="col-md-3 mb-2">
+          <strong>Valor do 1º Pagamento:</strong>
+          <p>{{ object.valor_primeiro_pagamento }}</p>
+        </div>
+      </div>
+      
+      <hr>
+      <!-- Observações -->
+      <h4 class="mb-3">Observações</h4>
+      <div class="row">
+        <div class="col-12">
+          <p>{{ object.observacoes }}</p>
+        </div>
+      </div>
+      
+      <div class="mt-3">
+        <a href="{% url 'contrato_update' object.pk %}" class="btn btn-warning">Editar</a>
+        <a href="{% url 'contrato_delete' object.pk %}" class="btn btn-danger">Excluir</a>
+        <a href="{% url 'contrato_list' %}" class="btn btn-secondary">Voltar</a>
+      </div>
+    </div>
+  </div>
+</div>
 {% endblock %}
