--- a/templates/condominio/condominio_list.html
+++ b/templates/condominio/condominio_list.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %}
 {% block title %}Condomínios - Administração de Imóveis{% endblock %}
 {% block content %}
-<h1>Condomínios</h1>
-<a href="{% url 'condominio_create' %}" class="btn btn-secondary mb-3">Novo Condomínio</a>
+<h3>Condomínios</h3>
+<a href="{% url 'condominio_create' %}" class="btn btn-secondary mb-3 btn-sm">Novo Condomínio</a>
 <table class="table table-striped">
   <thead>
     <tr>
