--- a/templates/imobiliaria/imobiliaria_list.html
+++ b/templates/imobiliaria/imobiliaria_list.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %}
 {% block title %}Imobiliárias - Administração de Imóveis{% endblock %}
 {% block content %}
-<h1>Imobiliárias</h1>
-<a href="{% url 'imobiliaria_create' %}" class="btn btn-secondary mb-3">Nova Imobiliária</a>
+<h3>Imobiliárias</h3>
+<a href="{% url 'imobiliaria_create' %}" class="btn btn-secondary mb-3 btn-sm">Nova Imobiliária</a>
 <table class="table table-striped">
   <thead>
     <tr>
