--- a/templates/pessoa/pessoa_list.html
+++ b/templates/pessoa/pessoa_list.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %}
 {% block title %}Pessoas - Administração de Imóveis{% endblock %}
 {% block content %}
-<h1>Pessoas</h1>
-<a href="{% url 'pessoa_create' %}" class="btn btn-secondary mb-3">Cadastrar Pessoa</a>
+<h3>Pessoas</h3>
+<a href="{% url 'pessoa_create' %}" class="btn btn-secondary mb-3 btn-sm">Cadastrar Pessoa</a>
 <table class="table table-striped">
   <thead>
     <tr>
