--- a/templates/base.html
+++ b/templates/base.html
@@ -9,10 +9,9 @@
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="{% url 'index' %}">Admin Imóveis</a>
+        <a class="navbar-brand" href="{% url 'index' %}">SLA Serviços</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" 
             aria-controls="navbarNav" aria-expanded="false" aria-label="Alternar navegação">
-            <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav mr-auto">
@@ -21,7 +20,7 @@
                 <li class="nav-item"><a class="nav-link" href="{% url 'condominio_list' %}">Condomínios</a></li>
                 <li class="nav-item"><a class="nav-link" href="{% url 'imovel_list' %}">Imóveis</a></li>
                 <li class="nav-item"><a class="nav-link" href="{% url 'contrato_list' %}">Contratos</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">Financeiro</a></li>
+                <li class="nav-item"><a class="nav-link" href="{% url 'pagamento_list' %}">Financeiro</a></li>
             </ul>
             <ul class="navbar-nav ml-auto">
                 {% if request.user.is_authenticated %}
